[package]
name = "rolly-craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-tokio-tasks = "0.11.0"
futures-channel = "0.3.28"
futures-util = "0.3.28"
tokio = "1.32.0"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
url = "2.4.1"
valence.git = "https://github.com/valence-rs/valence"
valence_text.git = "https://github.com/valence-rs/valence"
