[package]
name = "rolly-craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-tokio-tasks = "0.11.0"
chrono = { version = "0.4.28", features = ["serde", "std", "clock"] }
futures = "0.3.28"
futures-channel = "0.3.28"
futures-util = "0.3.28"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.105"
tokio = "1.32.0"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
url = "2.4.1"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
valence.git = "https://github.com/valence-rs/valence"
valence_text.git = "https://github.com/valence-rs/valence"
